--- a/evol_merge_config.yaml
+++ b/evol_merge_config.yaml
@@ -8,5 +8,5 @@ genome:
     layer_granularity: 8 # sane default
     allow_negative_weights: true # useful with task_arithmetic
 tasks:
-  - name: elyzatasks100
-    weight: 1.0
+  - name: math50 #- name: elyzatasks100
+    weight: 1.0 #weight: 0.0
