--- a/eval_tasks/math50.yaml
+++ b/eval_tasks/math50.yaml
@@ -18,4 +18,6 @@ metric_list:
 generation_kwargs:
   do_sample: true
   temperature: 0.5
-  max_gen_tokens: 256
+  max_gen_toks: 256
+  pad_token_id=tokenizer.pad_token_id
+  eos_token_id=tokenizer.eos_token_id
